refac(doc): #2994.115 rename rule 332
Former-commit-id: 272041ac889d4d13f6259ee5026792ae2a40d1a5

--- a/content/pages/rules/credentials/332/index.adoc
+++ b/content/pages/rules/credentials/332/index.adoc
@@ -4,7 +4,7 @@
 :keywords: Breached, Leaked, Password, Account, ASVS, CWE
 :rules: yes
 
-= R332. Prevent account operations with breached passwords
+= R332. Prevent the use of breached passwords
 
 == Requirement
 
