--- a/content/pages/rules/credentials/332/index.adoc
+++ b/content/pages/rules/credentials/332/index.adoc
@@ -34,3 +34,15 @@ V2.1 Password Security Requirements.(2.1.7)]
 Verify that passwords submitted during account registration, login, and
 password change are checked against a set of breached passwords either locally
 or using an external API.
+
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.2 General Authenticator Requirements.(2.2.1)]
+Verify that anti-automation controls are effective at mitigating breached
+credential testing, brute force, and account lockout attacks.
+Such controls include blocking the most common breached passwords,
+soft lockouts, rate limiting, CAPTCHA, ever increasing delays between attempts,
+IP address restrictions,
+or risk-based restrictions such as location, first login on a device,
+recent attempts to unlock the account, or similar.
+Verify that no more than 100 failed attempts per hour is possible on a single
+account.
