--- a/content/pages/rules/session/030/index.adoc
+++ b/content/pages/rules/session/030/index.adoc
@@ -1,69 +1,69 @@
 :slug: rules/030/
 :category: session
-:description: This document contains the details of the security requirements related to the definition and management of sessions and session variables the organization. This requirement establishes the importance of defining controls to manage object sessions securely to avoid common attacks.
-:keywords: Requirement, Security, Session, Authentication, Objects, Control
+:description: This document contains the details of the security requirements related to the definition and management of sessions and session variables the organization. This requirement establishes the importance of defining controls to manage object sessions securely to avoid reuse and replay attacks.
+:keywords: Replay, Reuse, Object, Session, ASVS, CWE
 :rules: yes
 
 = R030. Avoid object reutilization
 
 == Requirement
 
-System must control that objects
-(session id, cookies, etc)
-used in authentication process can't be reused.
+The system must guarantee that objects (session id, cookies, etc.)
+used in the authentication process can not be reused (**replay resistance**).
 
 == Description
 
-In a system it is necessary to control if the transmitted information
-is being reused by an attacker to impersonate an authorized user
-or the server response, so it is essential to verify the communications
-between the users and the system, avoiding in this way
-the reinjection of any type of information
-that affects the confidentiality and/or availability of the same.
+In a system, it is necessary to prevent transmitted information from
+being reused by an attacker to impersonate an authorized user
+or server responses.
+Thus, it is essential to verify the communications between the users and the
+system,
+avoiding in this way a replay of any request that could affect
+the confidentiality, integrity and/or availability of the system.
 
 == Implementation
 
-In order to prevent this type of impersonation
+In order to prevent this type of impersonation,
 there are several options to considerate
 depending on the context and implementation method.
 Some good practices to avoid data reutilization
 are listed below:
 
-. *Cryptographic nonce*:
-It consists of numbers that expire after their first use
-or after a small lapse of time, with which you can verify
-the authenticity of a message.
+. **Cryptographic nonce**:
+It consists of numbers that expire after their first use or after a small lapse
+of time,
+with which the authenticity of a message can be verified.
 They are often randomized and used in authentication protocols
 to ensure that past communications can not be reused.
 
 . *Timestamping*:
 In order to implement this method
-there must be a clock synchronization between client and server.
-Server will only accept messages with date and hour
+there must be a clock synchronization between the client and the server.
+The server will only accept messages with a date and an hour
 within a tolerance range.
 Thus, it minimizes the risk of potential attacks
-by providing a small time windows for exploitation.
+by providing small time windows for exploitation.
 
-. Session Token :
-In this method, the server sends a +token+ code
-which is used by the client to transform the key
-(e.g applying hash functions to key and token combination)
-before sending it again to the server.
-This value is compared with the client side authentication.
+. **Session Token**:
+In this method, the server sends a *token* code
+which is used by the client to transform a key
+(e.g. applying hash functions to the key and token combination)
+before sending it again to the server as part of the authentication process.
+The server then processes this value, compares it with the initial token,
+and rejects the request if they do not match.
 Thus, an attacker cannot perform replay attacks
 because the token sent by the server will be different
 (token generation must be random).
 
-. Session Time-out:
-Allow users to exit the application and clean session data,
-say, when an user exits the application his session
-must be invalidated in client and server side.
+. **Session Time-out**:
+Session objects are invalidated when the user terminates a session or when
+the user surpasses a certain time limit without posting new requests.
 
 == Attacks
 
 . Session hijacking
 . Identity impersonation
-. Man in the middle (+MiM+).
+. Man in the middle (*MitM*).
 . Replay attack
 
 == Attributes
@@ -83,19 +83,32 @@ must be invalidated in client and server side.
 == References
 
 . [[r1]] link:http://capec.mitre.org/data/definitions/60.html[CAPEC-60: Reusing Session IDs (aka Session Replay)].
+This attack targets the reuse of a valid session ID to spoof the target system
+in order to gain privileges.
 
 . [[r2]] link:https://cwe.mitre.org/data/definitions/287.html[CWE-287: Improper Authentication].
+When an actor claims to have a given identity,
+the software does not prove or insufficiently proves that the claim is correct.
 
 . [[r3]] link:https://cwe.mitre.org/data/definitions/294.html[CWE-294: Authentication Bypass by Capture-replay].
+A capture-replay flaw exists when the design of the software makes it possible
+for a malicious user to sniff network traffic and bypass authentication by
+replaying it to the server in question to the same effect as the original
+message (or with minor changes).
 
-. [[r4]] link:http://www.ietf.org/rfc/rfc2617.txt[HTTP Authentication: Basic and Digest Access Authentication].
+. [[r4]] link:https://cwe.mitre.org/data/definitions/308.html[CWE-308: Use of Single-factor Authentication].
+The use of single-factor authentication can lead to unnecessary risk of
+compromise when compared with the benefits of a dual-factor authentication
+scheme.
 
-. [[r5]] link:https://www.owasp.org/index.php/ASVS_V2_Authentication[+OWASP-ASVS v3.1-2.12+]
-Verify that all authentication decisions can be logged,
-without storing sensitive session identifiers or passwords.
-This should include requests with relevant metadata
-needed for security investigations.
+. [[r5]] link:http://www.ietf.org/rfc/rfc2617.txt[HTTP Authentication: Basic and Digest Access Authentication].
 
-. [[r6]] link:https://www.owasp.org/index.php/ASVS_V3_Session_Management[+OWASP-ASVS v3.1-3.7+]
-Verify that all successful authentication and re-authentication
-generates a new session and session id.
+. [[r6]] link:https://pages.nist.gov/800-63-3/sp800-63b.html[NIST 800-63B 5.2.8 Replay Resistance]
+An authentication process resists replay attacks if it is impractical to
+achieve a successful authentication by recording and replaying a previous
+authentication message.
+
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.2 General Authenticator Requirements.(2.2.6)]
+Verify replay resistance through the mandated use of OTP devices,
+cryptographic authenticators, or lookup codes.
