feat(doc): #2994.120 add refs to some rules
- Renamed R139 for clarity
- Addded ASVS, CWE and NIST references to R136 and R139
- Added ASVS and CWE references to R138
- Added CWE reference to R238
- Added a Description to R136, R138, R139
- Updated R136, R138 and R139 keywords
- Fixed some grammar issues


Former-commit-id: 73a6aa02a3c1fef258c5dfa1a03457de3365a859

--- a/content/pages/rules/credentials/139/index.adoc
+++ b/content/pages/rules/credentials/139/index.adoc
@@ -1,17 +1,42 @@
 :slug: rules/139/
 :category: credentials
-:description: This document details the security requirements related to credentials for access to sensitive information of the organization. This requirement is related to the importance of defining the minimum length for one-time use passwords within the company's system.
-:keywords: Requirement, Security, Length, Password, Characters, Minimum
+:description: This document details the security requirements related to credentials for access to sensitive information of the organization. This requirement is related to the importance of defining the minimum length for one-time passwords within the company's system.
+:keywords: Length, Password, OTP, ASVS, CWE, NIST
 :rules: yes
 
-= R139. Set minimum password length
+= R139. Set minimum OTP length
 
 == Requirement
 
-One-time use passwords must be at least 6 characters long.
+One-time passwords must be at least 6 characters long.
+
+== Description
+
+One-time passwords (*OTP*) are secrets used during operations that need added
+security or as part of user enrollment processes.
+Despite their short lifespan, they should have a minimum length of 6 characters
+as a protection against brute force attacks.
 
 == Findings
 
 * [inner]#link:/web/findings/035/[F035. Weak credential policy]#
 
 * [inner]#link:/web/findings/050/[F050. Guessed weak credentials]#
+
+== References
+
+. [[r1]] link:https://cwe.mitre.org/data/definitions/330.html[CWE-330: Use of Insufficiently Random Values].
+The software uses insufficiently random numbers or values in a security context
+that depends on unpredictable numbers.
+
+. [[r2]] link:https://pages.nist.gov/800-63-3/sp800-63b.html[NIST 800-63B 5.1.1.2 Memorized Secret Verifiers]
+Memorized secrets that are randomly chosen by the CSP (e.g., at enrollment)
+or by the verifier (e.g., when a user requests a new PIN)
+SHALL be at least 6 characters in length
+and SHALL be generated using an approved random bit generator.
+
+. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.3 Authenticator Lifecycle Requirements.(2.3.1)]
+Verify system generated initial passwords or activation codes SHOULD
+be securely randomly generated,
+SHOULD be at least 6 characters long.
