--- a/content/pages/rules/credentials/136/index.adoc
+++ b/content/pages/rules/credentials/136/index.adoc
@@ -1,24 +1,35 @@
 :slug: rules/136/
 :category: credentials
-:description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of defining mechanisms to force user to change temporary passwords after its first use.
-:keywords: Requirement, Security, Credentials, Temporary Passwords, Mechanisms, First Use
+:description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of defining mechanisms to force users to change temporary passwords after their first use.
+:keywords: Force, Temporary Passwords, Change, ASVS, CWE, NIST
 :rules: yes
 
-= R136. Force temporary passwords changing
+= R136. Force temporary password changing
 
 == Requirement
 
-The system must force the change of temporary passwords
-generated automatically after its first use.
+The system must force the change of automatically generated temporary passwords
+after their first use.
+
+== Description
+
+Temporary passwords are often harder to remember and shared over systems whose
+future integrity may not be guaranteed by the system that created them.
+Therefore, users should be forced to change them after their first use.
 
 == Referencias
 
-. [[r1]] link:https://www.owasp.org/index.php/Category:OWASP_Application_Security_Requirements_Project[+OWASP+ Application Security Requirements]
-Upon initial or first instance of requesting
-the application the user should be forced to select their password.
+. [[r1]] link:https://cwe.mitre.org/data/definitions/263.html[CWE-263: Password Aging with Long Expiration].
+Allowing password aging to occur unchecked can result in the possibility of
+diminished password integrity.
 
-. [[r2]] link:https://www.owasp.org/index.php/ASVS_V2_Authentication[+OWASP-ASVS v3.1-2.17+]
-Verify that the forgotten password function
-and other recovery paths do not reveal the current password
-and that the new password is not sent in clear text to the user.
-A one time password reset link should be used instead.
+. [[r2]] link:https://pages.nist.gov/800-63-3/sp800-63b.html[NIST 800-63B 6.1.1 Binding at Enrollment]
+Temporary secrets SHALL NOT be reused.
+
+. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.3 Authenticator Lifecycle Requirements.(2.3.1)]
+Verify system generated initial passwords or activation codes SHOULD be
+securely randomly generated, SHOULD be at least 6 characters long,
+and MAY contain letters and numbers,
+and expire after a short period of time.
+These initial secrets must not be permitted to become the long term password.
