--- a/content/pages/rules/credentials/135/index.adoc
+++ b/content/pages/rules/credentials/135/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/135/
 :category: credentials
 :description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of setting random values and minimum length to key derivations (salt) in passwords.
-:keywords: Security, Requirement, Passwords, Cryptography, Salt, Random.
+:keywords: Password, Salt, Random, ASVS, CWE, NIST
 :rules: yes
 
 = R135. Passwords with random salt
@@ -16,3 +16,31 @@ must be random and have a minimum length of *48* *bits*.
 * [inner]#link:/web/findings/035/[F035. Weak credential policy]#
 
 * [inner]#link:/web/findings/051/[F051. Cracked weak credentials]#
+
+== Referencias
+
+. [[r1]] link:https://cwe.mitre.org/data/definitions/759.html[CWE-759: Use of a One-Way Hash without a Salt].
+The software uses a one-way cryptographic hash against an input that should not
+be reversible, such as a password,
+but the software does not also use a salt as part of the input.
+
+. [[r2]] link:https://cwe.mitre.org/data/definitions/760.html[CWE-760: Use of a One-Way Hash with a Predictable Salt].
+The software uses a one-way cryptographic hash against an input that should not
+be reversible, such as a password,
+but the software uses a predictable salt as part of the input.
+
+. [[r3]] link:https://cwe.mitre.org/data/definitions/916.html[CWE-916: Use of Password Hash With Insufficient Computational Effort].
+The software uses a one-way cryptographic hash against an input that should not
+be reversible, such as a password,
+but the software uses a predictable salt as part of the input.
+
+. [[r5]] link:https://pages.nist.gov/800-63-3/sp800-63b.html[NIST 800-63B 5.1.1.2 Memorized Secret Verifiers]
+The salt SHALL be at least 32 bits in length and be chosen arbitrarily so as to
+minimize salt value collisions among stored hashes.
+
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.4 Credential Storage Requirements.(2.4.2)]
+Verify that the salt is at least 32 bits in length and be chosen arbitrarily
+to minimize salt value collisions among stored hashes.
+For each credential, a unique salt value and the resulting hash SHALL be
+stored.
