refac(doc): #2994.122 reassign some fin refs
Former-commit-id: 41096b8025ef91d2d776bd6cd9a9397eec51b0c5

--- a/content/pages/findings/security/050/index.adoc
+++ b/content/pages/findings/security/050/index.adoc
@@ -19,4 +19,4 @@ attack.
 
 . [[r2]] [inner]#link:/web/rules/133/[R133. Passwords with at least 20 characters]#
 
-. [[r3]] [inner]#link:/web/rules/139/[R139. Set minimum password length]#
+. [[r3]] [inner]#link:/web/rules/139/[R139. Set minimum OTP length]#
