--- a/content/pages/rules/credentials/130/index.adoc
+++ b/content/pages/rules/credentials/130/index.adoc
@@ -9,3 +9,7 @@
 == Requirement
 
 Passwords must be valid for a maximum of 30 days.
+
+== Findings
+
+* [inner]#link:/web/findings/035/[F035. Weak credential policy]#
