--- a/content/pages/rules/credentials/134/index.adoc
+++ b/content/pages/rules/credentials/134/index.adoc
@@ -9,11 +9,11 @@
 == Requirement
 
 The system must store passwords
-with different key derivations (+Salt+)
+with different key derivations (*Salt*).
 
 == Findings
 
-* [inner]#link:/web/findings/035/[F035. Weak credential policy]#
+* [inner]#link:/web/findings/020/[F020. Non-encrypted confidential information]#
 
 * [inner]#link:/web/findings/051/[F051. Cracked weak credentials]#
 
