--- a/content/pages/rules/credentials/135/index.adoc
+++ b/content/pages/rules/credentials/135/index.adoc
@@ -13,7 +13,7 @@ must be random and have a minimum length of *48* *bits*.
 
 == Findings
 
-* [inner]#link:/web/findings/035/[F035. Weak credential policy]#
+* [inner]#link:/web/findings/020/[F020. Non-encrypted confidential information]#
 
 * [inner]#link:/web/findings/051/[F051. Cracked weak credentials]#
 
