--- a/content/pages/rules/credentials/332/index.adoc
+++ b/content/pages/rules/credentials/332/index.adoc
@@ -19,6 +19,10 @@ Systems must check submitted passwords against some of these lists and prevent
 account creation and password update operations that use passwords contained in
 them.
 
+== Findings
+
+* [inner]#link:/web/findings/035/[F035. Weak credential policy]#
+
 == References
 
 . [[r1]] link:https://cwe.mitre.org/data/definitions/521.html[CWE-521: Weak Password Requirements]
