--- a/content/pages/findings/security/035/index.adoc
+++ b/content/pages/findings/security/035/index.adoc
@@ -12,12 +12,12 @@ The system's credential policy is not compliant with security regulations.
 
 == Rules
 
+. [[r1]] [inner]#link:/web/rules/130/[R130. Limit password lifespan]#
+
 . [[r1]] [inner]#link:/web/rules/132/[R132. Passphrases with at least 4 words]#
 
 . [[r2]] [inner]#link:/web/rules/133/[R133. Passwords with at least 20 characters]#
 
-. [[r3]] [inner]#link:/web/rules/134/[R134. Store passwords with salt]#
+. [[r3]] [inner]#link:/web/rules/139/[R139. Set minimum OTP length]#
 
-. [[r4]] [inner]#link:/web/rules/135/[R135. Passwords with random salt]#
-
-. [[r5]] [inner]#link:/web/rules/139/[R139. Set minimum password length]#
+. [[r3]] [inner]#link:/web/rules/332/[R332. Prevent the use of breached passwords]#
