feat(doc): #2994.123 add cwe ref to rule 130
- Added a CWE reference to R130
- Updated R130 keywords
- Fixed minor typo


Former-commit-id: 7fc0194977395efa548806b10df08fd430e9f5ad

--- a/content/pages/rules/credentials/130/index.adoc
+++ b/content/pages/rules/credentials/130/index.adoc
@@ -13,3 +13,9 @@ Passwords must be valid for a maximum of 30 days.
 == Findings
 
 * [inner]#link:/web/findings/035/[F035. Weak credential policy]#
+
+== References
+
+. [[r1]] link:https://cwe.mitre.org/data/definitions/263.html[CWE-263: Password Aging with Long Expiration].
+Allowing password aging to occur unchecked can result in the possibility of
+diminished password integrity. 
