feat(doc): #2994.124 add asvs ref to r134 and r135
- Added ASVS ref to r134 and r135
- Updated keywords
- Fixed minor typo


Former-commit-id: be3a45e429cda3f265e24f9c419f717dd4b3d0f7

--- a/content/pages/rules/credentials/130/index.adoc
+++ b/content/pages/rules/credentials/130/index.adoc
@@ -1,14 +1,14 @@
 :slug: rules/130/
 :category: credentials
 :description: This document details the security requirements related to credentials for access to sensitive information of the organization. In this requirement, it is recommended that the system does not allow its passwords to have a lifespan of more than 30 days.
-:keywords: System, Requirement, Password, Validity, Security, Expiration
+:keywords: Password, Validity, Security, Expiration, Limit, CWE
 :rules: yes
 
 = R130. Limit password lifespan
 
 == Requirement
 
-Passwords must be valid for a maximum of 30 days.
+Passwords must be valid for a maximum of *30* days.
 
 == Findings
 
@@ -18,4 +18,4 @@ Passwords must be valid for a maximum of 30 days.
 
 . [[r1]] link:https://cwe.mitre.org/data/definitions/263.html[CWE-263: Password Aging with Long Expiration].
 Allowing password aging to occur unchecked can result in the possibility of
-diminished password integrity. 
+diminished password integrity.
