--- a/content/pages/rules/credentials/134/index.adoc
+++ b/content/pages/rules/credentials/134/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/134/
 :category: credentials
 :description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of storing passwords securely using cryptographic functions to mask their content.
-:keywords: Requirement, Security, Passwords, Hash, Salt, Cryptography
+:keywords: Security, Passwords, Hash, Salt, Cryptography, ASVS
 :rules: yes
 
 = R134. Store passwords with salt
@@ -19,12 +19,11 @@ with different key derivations (*Salt*).
 
 == References
 
-. [[r1]] link:https://www.owasp.org/index.php/ASVS_V2_Authentication[+OWASP-ASVS v3.1-2.13+]
-Verify that account passwords are one way hashed with a salt,
-and there is sufficient work factor
-to defeat brute force and password hash recovery attacks.
-
-. [[r2]] link:https://www.owasp.org/index.php/ASVS_V2_Authentication[+OWASP-ASVS v3.1-2.21+]
-Verificar que todas las credenciales de autenticación
-para acceder a servicios externos a la aplicación
-estén encriptadas y almacenadas en una localización protegida.
+. [[r1]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.4 Credential Storage Requirements.(2.4.1)]
+Verify that passwords are stored in a form that is resistant to offline
+attacks.
+Passwords SHALL be salted and hashed using an approved one-way key derivation
+or password hashing function.
+Key derivation and password hashing functions take a password, a salt,
+and a cost factor as inputs when generating a password hash.
