--- a/content/pages/rules/credentials/135/index.adoc
+++ b/content/pages/rules/credentials/135/index.adoc
@@ -39,6 +39,15 @@ The salt SHALL be at least 32 bits in length and be chosen arbitrarily so as to
 minimize salt value collisions among stored hashes.
 
 . [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.4 Credential Storage Requirements.(2.4.1)]
+Verify that passwords are stored in a form that is resistant to offline
+attacks.
+Passwords SHALL be salted and hashed using an approved one-way key derivation
+or password hashing function.
+Key derivation and password hashing functions take a password, a salt,
+and a cost factor as inputs when generating a password hash.
+
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.4 Credential Storage Requirements.(2.4.2)]
 Verify that the salt is at least 32 bits in length and be chosen arbitrarily
 to minimize salt value collisions among stored hashes.
