--- a/content/pages/findings/security/085/index.adoc
+++ b/content/pages/findings/security/085/index.adoc
@@ -16,4 +16,4 @@ This exposes the information to unauthorized read and write operations.
 
 . [[r1]] [inner]#link:/web/rules/177/[R177. Avoid caching and temporary files]#
 
-. [[r2]] [inner]#link:/web/rules/329/[R329. Keep sensitive data out of the localStorage]#
+. [[r2]] [inner]#link:/web/rules/329/[R329. Keep client-side storage without sensitive data]#
